# Biomech-Analysis-Platform-Python

./: .gitignore  .readthedocs.yaml  404.html  Biomech-Analysis-Platform-Python.code-workspace  CHANGELOG.md  CODE_OF_CONDUCT.md  MANIFEST.in  MainWindow.py  MainWindow.ui  NavGraph.py  README.md  Spr23TWW_OA_AllSubjects_032323.csv  Spr23TWW_OA_AllSubjects_032323_TEST.csv  action.py  actions.py  class_hierarchy.pptx  classes.html  classes_ResearchOS.html  cli.py  config.py  data_object.py  database.db  database_init.py  dataset.py  defLoginSignals.py  derivative.py  dev_database.db  dev_database3.db  fast0.prof  index.html  initLoginSettings.py  init_research.py  load_digraph.py  loginInfo.csv  loginWindow.py  matlab_from_python.md  mkdocs.yml  objects.inv  packages.html  packages_ResearchOS.html  (+31 more)
.github/: CODEOWNERS.md
.github/workflows/: coveralls.yml  mkdocs_gh_deploy.yml  mkdocs_gh_deploy2.yml
.github/workflows_notworking/: mkdocs_gh_deploy2.yml
.venv3_9/: pyvenv.cfg
ChatGPT Graph/: test_graph.py
Developer/: index.html
Developer/Bridges/: index.html
Developer/Compilation/: index.html
Developer/DAG/: index.html
Developer/Nodes/: index.html
Developer/Package_Setup/: index.html
Developer/Running/: index.html
DiGraph/digraph/: index.html
Examples/: simple3d.py
GUI/: initAllSettings.py
GUI/Prev/: pgui.py  sqlTest.py
GUI/Rectangle_Tests/: Rectangle.py
Getting Started/first_project/: index.html
Getting Started/installation/: index.html
Getting Started/usage_orig/: index.html
Home/: index.html
Home/roadmap/: index.html
Icons/: Icons.qrc
Netgraph/: netgraph_test.py
NetworkX/: networkx_test.py
Prev/: createWidgets.py
Quick Start/quickstart/: index.html
Quick Start/quickstart_py/: index.html
Rectangle_Tests/: MainWindowCreateRectangle_Meredith071923.py  MainWindowCreateRectangle_MyAttempt.py  Rectangle.ui  gpt_rects
Research Object Types/research_object/: index.html
Research Object Types/variable/: index.html
Research Objects/data_objects/: index.html
Research Objects/pipeline_objects/: index.html
Research Objects/research_object/: index.html
Research Objects/research_objects/: index.html
Research Objects/variable/: index.html
SQL/: database.db  database.py  database2.py  database_alchemy.py  database_init.py  dataset.py
SQL Database/: index.html
SQL Database/config/: index.html
Tests/: test3d_gpt.py
archive/: research_objects_state.py  test_db_alchemy.py
assets/ClaudeStuff_NathanielMeeting_062824/: ConversationContent.txt  attribute-yaml-dag.txt  dag-structure-diagram.mermaid  dot-dag-specification.txt  flow-yaml-dag.txt  gait-analysis-pipeline-2.txt  gait-analysis-pipeline.txt  json-dag-specification.json  nested-yaml-dag.txt  xml-dag-specification.txt
data_objects/: data_object.py  dataset.py  subject.py  variable.py
docs/: .pages  class_hierarchy.pptx  getting_started.md  index.md  requirements.txt  usage.md  ~$class_hierarchy.pptx
docs/CLI/: cli.md
docs/Developer/: index.md
docs/DiGraph/: digraph.md
docs/Getting Started/: .pages  first_project.md  getting_started.md  installation.md  usage.md
docs/Quick Start/: quickstart.md  quickstart_py.md
docs/Research Object Types/: research_object.md  variable.md
docs/Research Objects/: data_objects.md  pipeline_objects.md  research_object.md  research_objects.md
docs/SQL Database/: index.md  interpreting_pipeline_table.md
docs/source/: conf.py  index.rst
examples/: derivative.py  import_example.py  importer.py  logsheet.xlsx  my_quickstart.py  quickstart.py
examples/example_project1/: 0_project_setup.py  1_import.py  subsets.py
getting_started/: index.html
how_to/: create_class_diagrams.md  matlab_from_python.md  mkdocs.md  multiple_packages_in_monorepo.md  pypi_upload_instructions.md
logs/: ResearchOS.jsonl
manuscript/: Manuscript Writing Checklist alias
objects/: data_object.py  dataset.py  phase.py  subject.py  subvariable.py  trial.py  variable.py  visit.py
pipeline_objects/: analysis.py  logsheet.py  pipeline_object.py  process.py  project.py
research_objects/: logsheets.py
sample_analysis_code/: sample1.py  sample2.py
search/: search_index.json
src/: README.md  conf.py  config.json  config.py  pyproject.toml  ro_graph.py
src/GUI/: LICENSE  README.md
src/ResearchOS/: __init__.py  __init_helper__.py  action.py  batches.py  build_pl.py  cli_entrypoint.py  cli_pl_entrypoint.py  code_inspector.py  code_runner.py  compile.py  config.py  connection.py  constants.py  io.py  (+51 more)
src/ResearchOS/cli/quickstart_files/: .gitignore  paths.py  pyproject.toml
src/ResearchOS/cli/quickstart_files/research_objects/: datasets.py  processes.py  variables.py
src/ResearchOS/cli/quickstart_files/secrets/: github_api_token.py
src/ResearchOS/cli/quickstart_files/src/process/: tmp.m
src/ResearchOS/cli/quickstart_files/src/project_name/research_objects/: data_objects.py  logsheets.py  processes.py
src/ResearchOS/cli/quickstart_files/src/research_objects/: dataset.py  logsheets.py  subsets.py
src/ResearchOS/package_template/: .gitignore  paths.py  pyproject.toml
src/ResearchOS/package_template/src/: bridges.toml  index.toml
src/ResearchOS/package_template/src/process/: tmp.py
src/ResearchOS/package_template/src/research_objects/: logsheet.toml  process.toml
test3d_gpt_2.py/: open3d.py  test3d_gpt.py  test3d_points_gpt.py
tests/: conftest.py  fixtures.py  phase.py  test_1_db.py  test_2_ro_creation.py  test_3_dataset.py  test_4_logsheet.py  test_4_subset.py  test_5_logsheet.py  test_6_variable.py  test_7_process.py  test_classify_input_type.py  test_config.py  test_create_package_dag.py  test_database.db  test_database.db-journal  test_dataset.py  test_db.py  test_discover_packages.py  test_get_logsheet_dict.py  test_get_package_dict.py  test_get_package_index_dict.py  test_obj_creation.py  test_read_logsheet.py  test_ro_creation.py  test_rodigraph.py  test_run_batch.py  test_standardize_package_bridges.py  test_standardize_package_runnables_dict.py  test_system.py
usage/: index.html
widget_objects/: widget_object.py
(+277 files in other folders)
