[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/pipeline_objects",
    "src/data_objects",
    "src/SQL"
]

[project]
name = "ResearchOS"
version = "0.0.0"
dependencies = [
    "mkdocstrings-python"
]
requires-python = ">=3.11"
authors = [
    {name = "Mitchell Tillman", email = "mtillman14@gmail.com"},
]
# dynamic = ["version", "description"]
description = "Operating system for scientific research."
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",    
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Documentation = "https://researchos.github.io/ResearchOS/"
Repository = "https://github.com/ResearchOS/ResearchOS"

[project.optional-dependencies]
doc = [
    "sphinx~=4.2.0"
]
