[project]
name = "project_name"
description = "my project description"
version = "0.1.0"
authors = [
    { name = "Author1 Name", email = "author1@email.com" },
    { name = "Author2 Name", email = "author2@email.com" }
]
# TODO: This can be a GitHub repository URL or a package name & version from PyPI.
dependencies = [
]

# No need to adjust the tool.researchos.paths tables unless you are using code from directories besides these.
[tool.researchos.paths.root]
root = "src"

[tool.researchos.paths.research_objects]
dataobject = "research_objects/data_objects.py"
dataset = "research_objects/datasets.py"
logsheet = "research_objects/logsheets.py"
process = "research_objects/processes.py"
variable = "research_objects/variables.py"
subset = "research_objects/subsets.py"
plot = "research_objects/plots.py"
stats = "research_objects/stats.py"

[tool.researchos.paths.code]
process = ["process/"]
plot = ["plot/"]
stats = ["stats/"]